test/spec_vectors/load64/fail/module_57.wat
(module (memory i64 0) (func $type-address-empty-in-memory.grow (memory.grow (i64.load)) (drop)))